public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/1561/source/compile
source.c: In function ‘main’:
source.c:9:24: error: expected ‘)’ before ‘;’ token
     for (i=0; i<=n; i++;){
                        ^
